--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Progate</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css">
-  <link rel="stylesheet" type="text/css" href="SutraCD.css">
-  <link rel="stylesheet" type="text/css" href="SutraCD_responsive.css">
+  <link rel="stylesheet" type="text/css" href="./css/SutraCD.css">
+  <link rel="stylesheet" type="text/css" href="./css/SutraCD_responsive.css">
 </head>
 <body>
   <header>
     <div class="container">
       <div class="header-left">
-        <a href="#"><img class="logo" src="Pg_main_logo.png"></a>
+        <a href="#"><img class="logo" src="./images/Pg_main_logo.png"></a>
       </div>
 
       <!-- モバイル用ヘッダーメニューアイコン -->
@@ -45,28 +45,28 @@
       <div class="lessons">
         <div class="lesson">
           <div class="lesson-icon">
-            <img src="Pg_html.png">
+            <img src="./images/Pg_html.png">
             <p>HTML & CSS</p>
           </div>
           <p class="text-contents">ウェブページの作製に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
-            <img src="Pg_jQuery.png">
+            <img src="./images/Pg_jQuery.png">
             <p>JQuery</p>
           </div>
           <p class="text-contents">素敵な動きを手軽に実装できるJavaScriptライブラリです。アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりといろいろなことができます。</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
-            <img src="Pg_ruby.png">
+            <img src="./images/Pg_ruby.png">
             <p>Ruby</p>
           </div>
             <p class="text-contents">オープンソースの動的なプログラミング言語で、シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。</p>
         </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="Pg_php.png">
+              <img src="./images/Pg_php.png">
               <p>PHP</p>
             </div>
               <p class="text-contents">HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
@@ -87,7 +87,7 @@
   </div>
   <footer>
     <div class="container">
-      <img src="Pg_footer_logo.png">
+      <img src="./images/Pg_footer_logo.png">
       <p>Learn to Code, Learn to be Creative.</p>
     </div>
   </footer>
